--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jobly Front End</title>
+    <title>Jobly Front End PIP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
