--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
     <link
       rel="apple-touch-icon"
       href="%PUBLIC_URL%/logo192.png" />
-    <link
+    <!-- <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -38,7 +38,7 @@
     -->
     <title>Jobly Front End PIP</title>
   </head>
-  <body>
+  <body class="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
